# OpenCvTutorialCpp

Lesson1/: main.cpp
Lesson1/my_lib/: CMakeLists.txt
Lesson1/my_lib/src/: MyLib.cpp
Lesson2/: CMakeLists.txt  main.cpp
